--- a/ReadStats/ReadStats.html
+++ b/ReadStats/ReadStats.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>RS3 Stats Detector v1.4</title>
+  <title>RS3 Stats Detector v1.5</title>
   <link rel="stylesheet" type="text/css" href="https://runeapps.org/nis/nis.css">
   <script src="https://runeapps.org/alt1lib.js"></script>
   <script src="https://www.unpkg.com/alt1/dist/ocr/index.js"></script>
@@ -18,7 +18,7 @@
     <button onclick="loadAssets()">Start Stats Finder</button>
     <div id="status">Waiting…</div>
     <div id="debug"></div>
-    <div id="version">Build v1.4 (refined width + fixed height)</div>
+    <div id="version">Build v1.5 (better left/right detection)</div>
   </div>
 
   <script>
@@ -90,28 +90,27 @@
       return (matchCount / total) >= threshold;
     }
 
-    function findBestEdge(anchorX, anchorY, screenImg, direction) {
-      let bestMatch = null;
-      let maxScore = 0;
+    function findEdge(anchorX, anchorY, screenImg, direction) {
       const range = (direction === "left" || direction === "right") ? 500 : 200;
+      const verticalSpan = 50; // scan +/- 50px vertically around anchor
+      let bestMatch = null;
 
       for (let d = 1; d <= range; d++) {
-        let testX = anchorX;
-        let testY = anchorY;
+        for (let offsetY = -verticalSpan; offsetY <= verticalSpan; offsetY++) {
+          let testX = anchorX;
+          let testY = anchorY + offsetY;
 
-        if (direction === "left") testX = anchorX - d;
-        if (direction === "right") testX = anchorX + statAnchorData.width + d;
-        if (direction === "up") testY = anchorY - d;
+          if (direction === "left") testX = anchorX - d;
+          if (direction === "right") testX = anchorX + statAnchorData.width + d;
+          if (direction === "up") testY = anchorY - d;
 
-        if (matchesIconAt(testX, testY, screenImg, direction === "up" ? statRoofData : statBorderData)) {
-          // crude score = distance (closer is better)
-          let score = 1 / d;
-          if (score > maxScore) {
-            maxScore = score;
-            bestMatch = {x: testX, y: testY};
+          const threshold = (direction === "up") ? 0.9 : 0.95; // stricter for borders
+          if (matchesIconAt(testX, testY, screenImg, direction === "up" ? statRoofData : statBorderData, threshold)) {
+            bestMatch = {x: testX, y: testY, dist: d};
           }
         }
       }
+
       return bestMatch;
     }
 
@@ -119,11 +118,11 @@
       let leftX = anchorX;
       let rightX = anchorX + statAnchorData.width;
       let topY = anchorY;
-      let bottomY = anchorY + statAnchorData.height; // fixed to bottom of anchor
+      let bottomY = anchorY + statAnchorData.height; // fixed to anchor bottom
 
-      const left = findBestEdge(anchorX, anchorY, screenImg, "left");
-      const right = findBestEdge(anchorX, anchorY, screenImg, "right");
-      const top = findBestEdge(anchorX, anchorY, screenImg, "up");
+      const left = findEdge(anchorX, anchorY, screenImg, "left");
+      const right = findEdge(anchorX, anchorY, screenImg, "right");
+      const top = findEdge(anchorX, anchorY, screenImg, "up");
 
       if (left) leftX = left.x;
       if (right) rightX = right.x + statBorderData.width;
