--- a/ReadStats/ReadStats.html
+++ b/ReadStats/ReadStats.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>RS3 Stats Detector v1.5</title>
+  <title>RS3 Stats Detector v1.6</title>
   <link rel="stylesheet" type="text/css" href="https://runeapps.org/nis/nis.css">
   <script src="https://runeapps.org/alt1lib.js"></script>
   <script src="https://www.unpkg.com/alt1/dist/ocr/index.js"></script>
@@ -18,7 +18,7 @@
     <button onclick="loadAssets()">Start Stats Finder</button>
     <div id="status">Waiting…</div>
     <div id="debug"></div>
-    <div id="version">Build v1.5 (better left/right detection)</div>
+    <div id="version">Build v1.6 (smarter left/right + faster)</div>
   </div>
 
   <script>
@@ -91,12 +91,17 @@
     }
 
     function findEdge(anchorX, anchorY, screenImg, direction) {
-      const range = (direction === "left" || direction === "right") ? 500 : 200;
-      const verticalSpan = 50; // scan +/- 50px vertically around anchor
-      let bestMatch = null;
+      const maxRange = (direction === "left" || direction === "right") ? 500 : 200;
+      const verticalSpan = 40; // scan +/- 40px vertically around anchor
+      const step = 2;          // check every 2px for speed
+      const minRun = 3;        // require 3 consecutive hits
+      let runCount = 0;
+      let lastGood = null;
 
-      for (let d = 1; d <= range; d++) {
-        for (let offsetY = -verticalSpan; offsetY <= verticalSpan; offsetY++) {
+      for (let d = 1; d <= maxRange; d += step) {
+        let foundHere = false;
+
+        for (let offsetY = -verticalSpan; offsetY <= verticalSpan; offsetY += step) {
           let testX = anchorX;
           let testY = anchorY + offsetY;
 
@@ -104,21 +109,31 @@
           if (direction === "right") testX = anchorX + statAnchorData.width + d;
           if (direction === "up") testY = anchorY - d;
 
-          const threshold = (direction === "up") ? 0.9 : 0.95; // stricter for borders
+          const threshold = (direction === "up") ? 0.9 : 0.95;
           if (matchesIconAt(testX, testY, screenImg, direction === "up" ? statRoofData : statBorderData, threshold)) {
-            bestMatch = {x: testX, y: testY, dist: d};
+            foundHere = true;
+            break;
           }
+        }
+
+        if (foundHere) {
+          runCount++;
+          if (runCount >= minRun) {
+            lastGood = {x: (direction === "up") ? anchorX : (direction === "left" ? anchorX - d : anchorX + statAnchorData.width + d), y: anchorY - (direction === "up" ? d : 0)};
+          }
+        } else {
+          runCount = 0; // reset streak if broken
         }
       }
 
-      return bestMatch;
+      return lastGood;
     }
 
     function findEdges(anchorX, anchorY, screenImg) {
       let leftX = anchorX;
       let rightX = anchorX + statAnchorData.width;
       let topY = anchorY;
-      let bottomY = anchorY + statAnchorData.height; // fixed to anchor bottom
+      let bottomY = anchorY + statAnchorData.height;
 
       const left = findEdge(anchorX, anchorY, screenImg, "left");
       const right = findEdge(anchorX, anchorY, screenImg, "right");
@@ -170,8 +185,8 @@
 
     function matchIcon(screenImg, icon) {
       const cw = screenImg.width, ch = screenImg.height;
-      for (let y = 0; y <= ch - icon.height; y++) {
-        for (let x = 0; x <= cw - icon.width; x++) {
+      for (let y = 0; y <= ch - icon.height; y += 2) {
+        for (let x = 0; x <= cw - icon.width; x += 2) {
           if (matchesIconAt(x, y, screenImg, icon)) {
             return {x: x, y: y};
           }
