--- a/FarmHelper/index.html
+++ b/FarmHelper/index.html
@@ -461,7 +461,7 @@
                             </li>
                             <p>OR</p>
                             <li>
-                                <div style="display: inline-block;" Portable Obelisk (Level 35)</div>
+                                <div style="display: inline-block;"> Portable Obelisk (Level 35)</div>
                                     <img class="icon" src="https://runescape.wiki/images/Portable_obelisk.png" />
                             </li>
                         </ul>
